	  project, with some minor additions and cleanups from Paul Aurich.
	* Voice & Video framework in libpurple, thanks to Mike Ruprecht's summer
	  of code project in 2008.
	* It should no longer be possible to end up with duplicates of buddies
	  in a group on the buddy list.
	* Removed the unmaintained and unneeded toc protocol plugin.
	* Fixed NTLM authentication on big-endian systems.
	* Various memory cleanups when unloading libpurple. (Nick Hebner)
	* Report idle time 'From last message sent' should work properly.
	* DNS servers are re-read when DNS queries fail in case the system has
	  moved to a new network and the old servers are not accessible.
	* DNS SRV records with equal priority are sorted with respect to their
	  weight as specified in RFC 2782.  (Vijay Raghunathan)
	* GnuTLS logging (disabled by default) can be controlled through the
	  PURPLE_GNUTLS_DEBUG environment variable, which is an integer between
	  0 and 9 (higher is more verbose). Higher values may reveal sensitive
	  information.
	* PURPLE_VERBOSE_DEBUG environment variable.  Currently, this is an "on" or
	  "off" variable.  Set it to any value to turn it on and unset it to turn
	  it off.  This will optionally be used to only show less useful debug
	  information on an as-needed basis.
	* PURPLE_LEAKCHECK_HELP environment variable.  Currently, this is an "on"
	  or "off" variable.  Set it to any value to turn it on and unset it to
	  turn it off.  This will be used to perform various actions that are
	  useful when running libpurple inside of Valgrind or similar programs.
	  Currently, it keeps plugins in memory, allowing Valgrind to perform
	  symbol resolution of leak traces at shutdown.
	* Don't do IPv6 address lookups if the computer does not have an IPv6
	  address configured.
	* Fix a leak when the UI provides its own DNS resolving UI op.
	  (Aman Gupta)
	* Don't fork a DNS resolver process to resolve IP addresses.  (Aman Gupta)